New generation of compilation messages
- added support for warnings in the compilation message system
- some deprecated code has been removed
- new code segments marked as deprecated